changes made to css due to alignment issues on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,21 +349,30 @@ font-family: 'Roboto', sans-serif; */
 .enquiry-form {
     font-family: 'Comfortaa', cursive;
     background-color: #E3E5E8;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 16px;
+    border-style: groove;
 }
 .enquiry-form h4 {
     margin: 30px 0px;
     color: rgb(190, 140, 136);
     font-weight: bold;
     text-align: center;
+    padding-top: 15px;
 }
 .enquiry-form h6 {
-    margin: 20px 0px;
+    margin: 20px 10px;
     color: #888888;
     text-align: center;
+    padding: 20px;
 }
 .form-item {
-    margin: 25px 85px;
-    width: 80%;
+    margin: 10px 20px;
+    padding: 20px;
 }
 .form-item button {
     background-color:#fafafa;
@@ -375,24 +384,21 @@ font-family: 'Roboto', sans-serif; */
 .springboard {
     background-color: #fafafa;
 }
-.sb-image {
-    position: relative;
-    text-align: center;
-    color: white;
-}
-.sb-image img {
+.sb-mainheading img {
     width: 100%;
-    height: 380px;
+    height: 410px;
 }
-.sb-headertext h1 {
+.sb-mainheading h1 {
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 8px;
     color: #6B55AC;
     text-shadow: 1px 1px 1px black, 0 0 20px black;
-    font-size: 55px;
+    font-size: 48px;
     margin-top: 40px;
 }
-.sb-headertext p {
+.sb-mainheading p {
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 8px;
     color: #6B55AC;
